--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <script src="../To-DO---knockoutJS/knockout-3.5.1.js"></script>
     <script src="../To-DO---knockoutJS/ModelView.js"></script>
-    <script src="../To-DO---knockoutJS/menu.js"></script>
+    <!-- <script src="../To-DO---knockoutJS/menu.js"></script> -->
 </body>
 
 </html>
